fixing some tests